.k8s/apps/9router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: 9router
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: 9router
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: 9router
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: 9router
      app.kubernetes.io/name: 9router
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: 9router
        app.kubernetes.io/name: 9router
    spec:
      automountServiceAccountToken: true
      containers:
        - envFrom:
            - secretRef:
                name: 9router-env
          image: ghcr.io/decolua/9router:0.4.55@sha256:48e3b553a4c94e7eeb8ff8f6c865f34d368141a5f82adb8539034a6dd3d48029
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 20128
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /app/data-home
              name: dataHome
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: 9router-data
        - name: dataHome
          persistentVolumeClaim:
            claimName: 9router-datahome
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.147
    lbipam.cilium.io/sharing-key: 9router
  labels:
    app.kubernetes.io/instance: 9router
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: 9router
    app.kubernetes.io/service: 9router
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: 9router
  namespace: apps
spec:
  ports:
    - name: http
      port: 20128
      protocol: TCP
      targetPort: 20128
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: 9router
    app.kubernetes.io/name: 9router
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: 9router
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: 9router
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: 9router
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: 9router.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: 9router
                port:
                  number: 20128
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - 9router.josevictor.me
      secretName: wildcard-tls
